--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   flutter_svg: ^1.1.6
+  sqflite: ^2.2.1
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
